--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -28,7 +28,7 @@ body {
 	background-color: $bg-color;
 }
 
-.main-wrapper, .header, .header__bottom-block-wrapper {
+.main-wrapper, .header, .header__bottom-block-wrapper, .menu {
 	max-width: 1600px;
 	width: 100%;
 	margin: 0 auto;
