--- a/src/assets/css/page-1.scss
+++ b/src/assets/css/page-1.scss
@@ -3,10 +3,258 @@
 	justify-content: flex-end;
     padding: 0 8.70588rem;
 	margin-bottom: 2.47059rem;
+	padding-top: 5rem;
+	z-index: 2;
+	position: relative;
+	background-color: $bg-color;
 	&__right-side {
 
 	}
 	&__text {
 		max-width: 21rem;
 	}
+}
+
+.world-section {
+	position: relative;
+	padding-top: 7.76471rem;
+	padding-bottom: 7.29412rem;
+	margin-bottom: 11.4706rem;
+	&__button { 
+		position: relative;
+		&:after {
+			content: '';
+			position: absolute;
+			left: 0;
+			right: 0;
+			bottom: 0;
+			top: 0;
+			height: 2px;
+			background-color: $bg-color;
+			z-index: 1;
+			top: calc(50% - 2px);
+			left: -50vw;
+			width: 50vw;
+		}
+	}
+	&:before {
+		content: '';
+		background-color: $bg-color;
+		left: 0;
+		top: -3em;
+		right: 0;
+		z-index: 1;
+		height: 3em;
+		position: absolute;
+	}	
+}
+
+.common-block {
+	display: flex;
+	width: 100%;
+	position: relative;
+	flex-direction: column;
+	align-items: baseline;
+
+	&__title {
+		position: absolute;
+	    left: -1.82353rem;
+	    top: -3.94118rem;
+	    z-index: 1;
+	}
+	&__item-wrap {
+		display: flex;
+		margin-bottom: 1.29412rem;
+		width: 100%;
+	}
+	&__item {
+		flex-basis: calc(100% / 3);
+		display: flex;
+		flex-direction: column;
+		margin-right: 0.352941rem;
+		&:hover {
+			.common-block__item-image {
+				img {
+					transform: scale(1.05);
+				}
+				&:after {
+					opacity: 0;
+				}
+			}
+		}
+		&:last-of-type {
+			margin-right: 0;
+		}
+		&-image {
+		    height: 15vmax;
+		    max-height: 240px;
+		    position: relative;
+		    margin-bottom: 0.882353rem;
+		    overflow: hidden;
+		    
+		    &:after {
+				@extend %image-opacity;		    	
+		    }
+			img {
+				transition: .3s;
+				@extend %img;
+			}
+		}
+		&-desc {
+
+		}
+	}
+	&__button {
+
+	}
+
+
+	// used sections
+	&_news {
+		margin-bottom: 3.41176rem;
+	}
+	&_instagram {
+		.common-block__item {
+			flex-basis: calc(100% / 4);
+			margin-right: 0.117647rem;
+			&-image {
+				height: 17vmax;
+				max-height: 311px;				
+			}
+			&:hover {
+				.common-block__item-image {
+					img {
+						transform: none;
+					}
+				}
+			}			
+		}
+	}
+	// ----------------	
+} 
+
+.foundation {
+	display: flex;
+	width: 100%;
+	flex-direction: column;
+	position: relative;
+	align-items: baseline;
+	// NO-bem
+	margin-bottom: 9rem;
+	&__title {
+		position: absolute;
+		top: calc(50% - 125px/2);
+		left: 66%;
+		z-index: 1;
+	}
+	&__text-wrap {
+		width: 70%;
+		margin-left: auto;	
+
+	}
+	&__text {
+		margin-bottom: 1.94118rem;
+	}
+	&__image {
+		width: 50%;
+		height: 20vmax;
+		max-height: 315px;
+		position: relative;
+		margin-bottom: 2.64706rem;
+		&:after {
+			@extend %image-opacity;
+		}
+		img {
+			@extend %img;
+		}
+	}
+}
+
+
+.arts-section {
+
+
+	&__container {
+		padding-top: 8.70588rem;
+		padding-bottom: 9.88235rem;
+	}
+	&__item {
+		margin-bottom: 9.52941rem;
+		&:last-of-type {
+			margin-bottom: 0;
+		}
+	}
+	&__top-separator {
+
+	}
+
+	&__title {
+		color: $gray-4;
+		padding-left: 1.41176rem;
+		border-left: 2px solid transparent;
+		position: relative;
+		left: -1.70588rem;
+	    padding-bottom: 6.05882rem;
+		&:after {
+			content:'';
+			position: absolute;
+			width: 2px;
+			background-color: $gray-4;
+			top: 0;
+			left: 0;
+			bottom: -80px;
+		}		
+	}
+}
+
+.art-item {
+	background-color: #fff;
+	display: flex;
+	height: 38.5vmax;
+	max-height: 36.9412rem;	
+	&__image {
+		height: 100%;
+		flex-basis: 50%;
+		img {
+			margin-top: -1.35294rem;
+			@extend %img;
+		}
+	}
+	&__text-wrap-inner {
+		padding: 6.5rem 0 2.23529rem;
+		box-sizing: border-box;
+		display: flex;
+		flex-direction: column;
+		align-items: baseline;	
+		height: 100%;	
+		width: 56%;
+		margin: auto;
+	}
+	&__text {
+		flex-basis: 50%;
+		display: flex;
+	}
+	&__button {
+		margin-top: auto;
+	}
+	&__desc {
+	    margin: auto;
+	}
+	&__title-wrap {
+		padding-bottom: 3.64706rem;
+		position: relative;
+		// margin-bottom: 32px;
+		&:after {
+			content: '';
+			position: absolute;
+			left: 0;
+			bottom: 0;
+			height: 2px;
+			width: 4.05882rem;
+			background-color: $gray-4;
+		}
+	}
+	&__title {
+		margin-left: -24px;
+	}	
 }
