--- a/src/assets/css/fonts.scss
+++ b/src/assets/css/fonts.scss
@@ -12,7 +12,7 @@
   font-family: 'f_font';
   src: url('../fonts/f_font.eot'); /* IE9 Compat Modes */
   src: url('../fonts/f_font.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../fonts/f_font.woff2') format('woff2'), /* Super Modern Browsers */
+       // url('../fonts/f_font.woff2') format('woff2'), /* Super Modern Browsers */
        url('../fonts/f_font.woff') format('woff'), /* Pretty Modern Browsers */
        url('../fonts/f_font.ttf')  format('truetype'), /* Safari, Android, iOS */
        url('../fonts/f_font.svg#f_font') format('svg'); /* Legacy iOS */
