--- a/src/assets/css/header.scss
+++ b/src/assets/css/header.scss
@@ -17,6 +17,11 @@
 	}
 	
 	&--close {
+		.header__logo {
+			transition-delay: 1s;
+			transition: .2s;
+			opacity: 0;
+		}
 		&:before {
 			// transform: scaleY(1);
 			opacity: 1;
@@ -25,7 +30,13 @@
 		}
 	}	
 }
-
+.wrap-f-title {
+	position: fixed;
+	left: 0;
+	right: 0;
+	top: 0;
+	z-index: 10;
+}
 .header {
 	box-sizing: border-box;
 	padding: 5.52941rem 8.70588rem 0;
@@ -45,10 +56,15 @@
 
 	&__title {
 		position: absolute;
-		top: 2.11765rem;
+		top: 30px;
 		left: 8.70588rem;
 		transition: .3s;
-		z-index: 1;
+		z-index: 11;
+		&--change-color {
+			color: $gray-4;
+			opacity: 1 !important;		
+		}
+
 	}
 	&__image-wrap {
 		width: 100%;
@@ -64,7 +80,7 @@
 		top: 0;
 		@extend %img;
 	    height: calc(100% + 20vmax);
-	    max-height: 800px;
+        max-height: 1045px;
 		z-index: -1;
 	}
 	&__logo {
@@ -116,6 +132,11 @@
 			color: $gray-4;
 			margin-bottom: 0.235294rem;
 			transition: 0.2s;
+			display: inline-block;
+			transition: none;
+			&:hover {
+				color: $gray-2;
+			}
 		}
 		&-scroll {
 			margin-top: 1.58824rem;
