--- a/src/assets/css/elements.scss
+++ b/src/assets/css/elements.scss
@@ -77,7 +77,7 @@
 	&__icons {
 		position: absolute;
 		left: 13px;
-		top: 39px;
+		top: 34px;
 		width: 30px;
 		height: 14px;
 		cursor: pointer;
@@ -126,7 +126,7 @@
 	    box-sizing: border-box;
 	    padding-top: 7rem;	    
 	    padding-left: 2.41176rem;
-	    transform: translateX(-50vw);
+	    transform: translateX(-100%);
 	    background-color: $gray-2;
 	    // &:after {
 	    // 	content: '';
