--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -35,5 +35,7 @@ body {
 }
 // imports site part
 @import 'header';
+@import 'category-page';
 @import 'page-1';
 @import 'media';
+@import 'work-page';
