--- a/src/assets/css/elements.scss
+++ b/src/assets/css/elements.scss
@@ -7,6 +7,9 @@
 	&--gray {
 		background-color: $gray-4;
 	}
+	&--white {
+		background-color: #fff;
+	}
 }
 
 .title-h4, .title-h2, .title-usual, .link-2, .menu-item, .button{
@@ -53,7 +56,9 @@
 		color: $blueHover;
 	}
 }
-
+.nicescroll-cursors {
+	will-change: transform;
+}
 .menu {
     z-index: 10;
     position: fixed;
@@ -192,5 +197,180 @@
 			transform: translateX(4px);
 		}
 	}
+	&--reverse {
+		&:hover {
+			.button__arrow {
+				transform: translateX(-4px) rotate(180deg);
+			}
+		}
+		.button__arrow {
+			right: auto;
+			left: 32px;
+			transform: rotate(180deg);
+			top: 18px;
+		}
+	}	
 }
 
+.footer {
+	position: relative;
+	width: 100%;
+
+	&:after {
+		content: '';
+		background-color: $gray-4;
+		// left: -50vw;
+		// right: -50vw;
+		left: 0;
+		right: 0;
+		top: 0;
+		bottom: 0;
+		position: absolute;
+		z-index: -1;
+	}
+	&__wrapper {
+		max-width: 1600px;
+		width: 100%;
+		margin: 0 auto;
+	}
+	&__container {
+		padding-left: 5.41176rem;
+		padding-right: 0;
+		padding-top: 3.35294rem;
+		padding-bottom: 40px;
+		display: flex;
+		justify-content: space-between;
+
+	}
+	&__copy {
+		font-size: 0.764706rem;
+		text-align: right;
+		justify-content: flex-end;
+		line-height: 1.11176rem;
+	}
+	&__col {
+		flex: 1;
+		display: flex;
+		flex-direction: column;
+	}
+	&__nav {
+		display: flex;
+		flex-direction: column;
+		&-item {
+			line-height: 17px;
+		}
+		&-wrap {
+			align-items: baseline;
+		}
+	}
+	&__sign {
+
+		&-title {
+			max-width: 15.4706rem;
+			margin-bottom: 0.588235rem;
+		}
+		&-wrap {
+			justify-content: space-between;
+			align-items: center;
+			text-align: center;
+			margin-top: -7px;
+		    position: absolute;
+		    top: 57px;
+		    left: calc(50% - 263px/2);
+		    bottom: 44px;				
+		}
+		&-button {
+			max-width: 15.4706rem;
+		}
+		&-input {
+			max-width: 15.4706rem;
+			text-align: center;
+			color: $gray-1;
+			border-bottom: 1px solid;
+			width: 100%;
+			padding-bottom: 6px;
+			&:focus::-webkit-input-placeholder { color:transparent; }
+		}
+	}
+	::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+	  color: $gray-2;
+	}
+	::-moz-placeholder { /* Firefox 19+ */
+	  color: $gray-2;
+	}
+	:-ms-input-placeholder { /* IE 10+ */
+	  color: $gray-2;
+	}
+	:-moz-placeholder { /* Firefox 18- */
+	  color: $gray-2;
+	}	
+
+
+
+}
+
+.gallery {
+	&__desc-wrap {
+		margin-bottom: 52px;
+	}
+	&__desc {
+		font-size: 28px;
+	}
+	&__item-wrap {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-between;
+		&:after {
+			content: '';
+			flex-basis: calc(100% / 3 - 4px);
+		}
+	}
+	&__item {
+		flex-basis: calc(100% / 3 - 4px);
+		margin-bottom: 6px;
+		position: relative;
+		img {
+			@extend %img;
+		}
+		&:after {
+			content: '';
+			transition: .3s;
+			transition: .3s;
+			position: absolute;
+			left: 0;
+			top: 0;
+			bottom: 0;
+			right: 0;
+			background-color: #8e8e99;
+			opacity: 0.3;			
+		}
+		&:hover {
+			&:after {
+				opacity: 0;
+			}
+		}
+	}
+}
+
+.page {
+	&__container {
+		padding-top: 6.58824rem;
+		padding-bottom: 2.23529rem;
+		margin-bottom: 4.29412rem;
+
+	}
+	&__title-separator {
+	    position: absolute;
+	    left: 4px;
+	    top: -158px;		
+	}
+}
+
+.movie {
+	&__container {
+		padding: 3.52941rem 5.47059rem 5.11765rem;
+		box-sizing: border-box;
+		background-color: #fff;
+	    margin-bottom: 4.29412rem;
+	}
+}
